wheel scrolling issue related to tooltip visibility issue is fixed

--- a/src/app/components/WhoWeAre/WhoWeAre.module.css
+++ b/src/app/components/WhoWeAre/WhoWeAre.module.css
@@ -81,3 +81,7 @@
   padding-right: 16px;
   z-index: 1000; /* Set a high z-index value */
 }
+
+.invisible {
+  visibility: hidden;
+}
